--- a/sintesis/consum.html
+++ b/sintesis/consum.html
@@ -61,7 +61,7 @@
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
           <p id="text1">Nuestra opinión sobre este supermercado es que los productos son económicos de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
-          <p id="text3">Teléfono: 932 46 29 00</p>
+          <p id="text3">Telefono: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
@@ -72,7 +72,7 @@
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
             <p id="text1">Los precios de este supermercado son un poco elevados, ya que son de importación, viene desde Japón, pero estos vienen de buena calidad. La atención al público es estupenda, estos te reciben con muy buena educación al entrar y al salir.</p>
-            <p id="text3">Teléfono: 935 32 19 38</p>
+            <p id="text3">Telefono: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
@@ -83,7 +83,7 @@
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
             <p id="text1"> Al ser una de las pocas pastelerías Japonesas en Barcelona, los productos son elevados pero a la vez de una gran calidad que no podrías encontrar en tiendas ya de comida procesada, Takashi Ochiai es grande que dispone con dos grandes apartados.</p>
-            <p id="text3">Teléfono: 934 53 63 83</p>
+            <p id="text3">Telefono: 934 53 63 83</p>
           </div>
           <div id="haiku"><h2>Starting From Snack</h2>
             <div> <img src="foto/snack2.jpg"  class="grande"></div>
@@ -92,7 +92,7 @@
             <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
-            <p id="text3">Teléfono:---</p>
+            <p id="text3">Telefono:---</p>
           </div>
 
       </div>
