--- a/sintesis/consum_cat.html
+++ b/sintesis/consum_cat.html
@@ -60,7 +60,7 @@
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
           <p id="text1">La nostra opinió sobre aquest supermercat és que els productes són econòmics de preu, és una botiga àmplia i molt ben il·luminada, disposen de molts productes orientals i de gran qualitat, la recomanem sens dubte pels seus grans productes.</p>
-          <p id="text3">Teléfono: 932 46 29 00</p>
+          <p id="text3">Telefon: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
@@ -73,7 +73,7 @@ Tokyo-Ja es troba a Barcelona concretament en zona de l'Eixample, és una botiga
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
             <p id="text1">Els preus d'aquest supermercat són una mica elevats, ja que són d'importació que ve des del Japó, aquests vénen de bona qualitat. L'atenció al públic és estupenda, aquests et reben amb molt bona educació en entrar i en sortir.</p>
-            <p id="text3">Teléfono: 935 32 19 38</p>
+            <p id="text3">Telefon: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
@@ -86,7 +86,7 @@ Tokyo-Ja es troba a Barcelona concretament en zona de l'Eixample, és una botiga
             <p id="text1"> En ser una de les poques pastisseries Japoneses a Barcelona, ​​els productes són elevats però alhora d'una gran qualitat que no podries trobar en botigues ja de menjar processat, Takashi Ochiai és gran que disposa amb dos grans apartats.
 
 </p>
-            <p id="text3">Teléfono: 934 53 63 83</p>
+            <p id="text3">Telefon: 934 53 63 83</p>
           </div>
           <div id="haiku"><h2>Starting From Snack</h2>
             <div> <img src="foto/snack2.jpg"  class="grande"></div>
@@ -96,7 +96,7 @@ Tokyo-Ja es troba a Barcelona concretament en zona de l'Eixample, és una botiga
             <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
-            <p id="text3">Teléfono:---</p>
+            <p id="text3">Telefon:---</p>
           </div>
 
       </div>
