--- a/sintesis/restaurantes.html
+++ b/sintesis/restaurantes.html
@@ -55,7 +55,7 @@
                   <div> <img src="foto/ajisen.jpg"  class="grande"></div>
                   <p class="text">Ramen-Ya Ajisen es un restaurante Japonés, pequeño pero muy decorado que tiene un ambiente anime, en este restaurantey sirven unos platos típicos Japoneses de muy buena calidad y a un precio de lo más económico, su atención al píblico es lo más agradable.</p>
 
-                  <p class="text3">Teléfono: 933 30 26 04</p>
+                  <p class="text3">Telefono: 933 30 26 04</p>
                 </div>
 
 
@@ -63,7 +63,7 @@
                   <div> <img src="foto/fukuya.jpg"  class="grande"></div>
                 <p class="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia Japonesa, este tiene una decoración básica pero acogedora. Aquí puedes encontrar desde cocina nipona antigua hasta la más moderna. Es bastante grande y acogedora y la atención al píblico es amable.</p>
 
-                <p class="text3">Teléfono: 935 18 65 04</p>
+                <p class="text3">Telefono: 935 18 65 04</p>
                 </div>
 
 
@@ -71,7 +71,7 @@
                 <div> <img src="foto/hiro.jpg"  class="grande"></div>
                  <p class="text">Ramen-ya Hiro, en este restaurante hacen el mejor ramen de Barcelona, aparte de hacer ramen también hacen fideos Japoneses, es un local pequeño y un poco antiguo. En este restaurante japonés hay que ir pronto porque si no tienes que hacer cola, pero vale la pena para poder comer su ramen y para la atención al público.</p>
 
-                  <p class="text3">Teléfono: 930 02 84 41</p>
+                  <p class="text3">Telefono: 930 02 84 41</p>
               </div>
 
 
@@ -80,39 +80,39 @@
             <div> <img src="foto/jardin.jpg"  class="grande"></div>
             <p class="text">Jardín del Bambú, es un buffet libre con bastante variedad de platos Japoneses, tiene un ambiente moderno y acogedor con una gran iluminación y la calidad-precio es adecuada, su servicio es agradable y eficiente.</p>
 
-            <p class="text3">Teléfono: 935 39 88 82</p>
+            <p class="text3">Telefono: 935 39 88 82</p>
           </div>
 
           <div id="otonashi"><h2>Mikawa</h2>
             <div> <img src="foto/mikawa.jpg"  class="grande"></div>
             <p class="text">Mikawa es un resataurante de comida japonesa, la carta es variada en ella puedes encontrar makis, sopas, sushi... Este restaurante cuenta con un buffer libre y un menú a la carta, es amplio y de buena iluminación su servicio es rápido y los camareros son amables. El precio es económico y su comida es exquisita.</p>
 
-            <p class="text3">Teléfono: 930 23 19 04</p>
+            <p class="text3">Telefono: 930 23 19 04</p>
           </div>
 
           <div id="haiku"><h2>Nihon Sakari</h2>
             <div> <img src="foto/nihon.jpg"  class="grande"></div>
             <p class="text">Nihon Sakari, es uno de los mejores restaurantes Japoneses también es acogedor que dispone con decoración nipona, con gran calidad en sus productos, dispone con opciones para vegeritatienos y la atención al público es correcta y su calidad-precio es estupenda. </p>
 
-            <p class="text3">Teléfono: 932 65 04 60</p>
+            <p class="text3">Telefono: 932 65 04 60</p>
           </div>
 
           <div id="norma"><h2>Nomo Gracia</h2>
             <div> <img src="foto/nomo.jpg"  class="grande"></div>
             <p class="text">En Nomo Graca, encontrarás comida Japonesa donde aquí la comida es una maravilla, su ambiente es moderno y acogedor con elementos de madera y acero oxidado, dispone de un salón amplio y una terraza exterior. Este restaurante tiene opciones vegetarianas, veganas y opciones sin gluten.La comida es bien presentada. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
-            <p class="text3">Teléfono: 934 15 96 22</p>
+            <p class="text3">Telefono: 934 15 96 22</p>
           </div>
           <div id="haiku"><h2>Ramen BCN</h2>
             <div> <img src="foto/ramen.jpg"  class="grande"></div>
             <p class="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
-            <p class="text3">Teléfono: 931 06 58 74</p>
+            <p class="text3">Telefono: 931 06 58 74</p>
           </div>
 
 
           <div id="haiku"><h2>Yatai</h2>
             <div> <img src="foto/yatai.jpg"  class="grande"></div>
             <p class="text">Si no has estado nunca en Japón, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
-            <p class="text3">Teléfono: 935 32 64 56</p>
+            <p class="text3">Telefono: 935 32 64 56</p>
           </div>
 
 
@@ -121,7 +121,7 @@
             <div> <img src="foto/okono.jpg"  class="grande"></div>
             <p class="text">Kawamura es un restaurante cálido y bien ambientado con la cultura Japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
 
-            <p class="text3">Teléfono: 930 23 75 46</p>
+            <p class="text3">Telefono: 930 23 75 46</p>
           </div>
 
 
@@ -129,7 +129,7 @@
             <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
             <p class="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
 
-            <p class="text3">Teléfono: 934 58 04 94</p>
+            <p class="text3">Telefono: 934 58 04 94</p>
           </div>
 
 
