--- a/sintesis/restaurantes_cat.html
+++ b/sintesis/restaurantes_cat.html
@@ -56,7 +56,7 @@
                   <p class="text">Ramen-Ya Ajisen es un restaurante Japonés, pequeño pero muy decorado quRamen-Ja Ajisen és un restaurant Japonès, petit però molt bé decorat que té un ambient anime, en aquest restaurant serveixen uns plats típics Japonesos de molt bona qualitat a un preu d'allò més econòmic, la seva atenció al públic és el més agradable.
 </p>
 
-                  <p class="text3">Teléfono: 933 30 26 04</p>
+                  <p class="text3">Telefon: 933 30 26 04</p>
                 </div>
 
 
@@ -65,7 +65,7 @@
                 <p class="text">Fukuya, ofereix un sushi de molt alta qualitat a més d'altres plats casolans de la gastronomia Japonesa, aquest té una decoració bàsica però acollidora. Aquí pots trobar des de cuina nipona antiga fins a la més moderna. És bastant gran i acollidora i l'atenció al públic és amable.
 </p>
 
-                <p class="text3">Teléfono: 935 18 65 04</p>
+                <p class="text3">Telefon: 935 18 65 04</p>
                 </div>
 
 
@@ -73,7 +73,7 @@
                 <div> <img src="foto/hiro.jpg"  class="grande"></div>
                  <p class="text">Ramen-ya Hiro, en este restaurante hacen el mejor ramen de Barcelona, aparte de hacer ramen también hacen fideos Japoneses, es un local pequeño y un poco antiguo. En este restaurante japonés hay que ir pronto porque si no tienes que hacer cola, pero vale la pena para poder comer su ramen y para la atención al público.</p>
 
-                  <p class="text3">Teléfono: 930 02 84 41</p>
+                  <p class="text3">Telefon: 930 02 84 41</p>
               </div>
 
 
@@ -84,7 +84,7 @@
 Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, té un ambient modern i acollidor amb una gran il·luminació i la qualitat-preu és adequada, el seu servei és agradable i eficient.
 </p>
 
-            <p class="text3">Teléfono: 935 39 88 82</p>
+            <p class="text3">Telefon: 935 39 88 82</p>
           </div>
 
           <div id="otonashi"><h2>Mikawa</h2>
@@ -94,7 +94,7 @@ Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, 
 
 </p>
 
-            <p class="text3">Teléfono: 930 23 19 04</p>
+            <p class="text3">Telefon: 930 23 19 04</p>
           </div>
 
           <div id="haiku"><h2>Nihon Sakari</h2>
@@ -102,19 +102,19 @@ Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, 
             <p class="text">Nihon sakari, és un dels millors restaurants Japonesos, també és acollidor que disposa amb decoració nipona, amb gran qualitat en els seus productes, disposa amb opcions per a vegetarians i l'atenció al públic és correcta i la seva qualitat-preu és estupenda.
  </p>
 
-            <p class="text3">Teléfono: 932 65 04 60</p>
+            <p class="text3">Telefon: 932 65 04 60</p>
           </div>
 
           <div id="norma"><h2>Nomo Gracia</h2>
             <div> <img src="foto/nomo.jpg"  class="grande"></div>
             <p class="text">En Nomo Gracia, trobaràs menjar Japonès on aquí el menjar és una meravella, el seu ambient és modern i acollidor amb elements de fusta i acer oxidat, disposa d'un saló ampli i una terrassa exterior. Aquest restaurant té opcions vegetarianes, veganes i opcions sense gluten. El menjar és ben presentat. El servei és excel·lent i el local és ampli amb opció de reserva encara que una mica lent en servir.</p>
-            <p class="text3">Teléfono: 934 15 96 22</p>
+            <p class="text3">Telefon: 934 15 96 22</p>
           </div>
           <div id="haiku"><h2>Ramen BCN</h2>
             <div> <img src="foto/ramen.jpg"  class="grande"></div>
             <p class="text">En aquest restaurant el menjar és boníssim, el tracte al client és fantàstic sent amable i atent, el local és gran i net i bona decoració bàsica però agradable alhora, és molt recomanable visitar aquest lloc.
 </p>
-            <p class="text3">Teléfono: 931 06 58 74</p>
+            <p class="text3">Telefon: 931 06 58 74</p>
           </div>
 
 
@@ -122,7 +122,7 @@ Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, 
             <div> <img src="foto/yatai.jpg"  class="grande"></div>
             <p class="text">Si no has estat mai al Japó, has de visitar aquest lloc, ja que la decoració d'aquest lloc està replet de detalls curiosos. Et recomanem reservar, ja que se sol omplir molt. El menjar és de bon preu però no és de molt bona qualitat, així que si vols gastar-te pocs diners i menjar molt aquest és el teu lloc.
 </p>
-            <p class="text3">Teléfono: 935 32 64 56</p>
+            <p class="text3">Telefon: 935 32 64 56</p>
           </div>
 
 
@@ -131,7 +131,7 @@ Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, 
             <div> <img src="foto/okono.jpg"  class="grande"></div>
             <p class="text">Kawamura és un restaurant càlid i ben ambientat amb la cultura japonesa. El servei és molt atent i professional, el preu és raonable, ja que el menjar és de molt bona qualitat. </p>
 
-            <p class="text3">Teléfono: 930 23 75 46</p>
+            <p class="text3">Telefon: 930 23 75 46</p>
           </div>
 
 
@@ -139,7 +139,7 @@ Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, 
             <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
             <p class="text">Yutaka és un restaurant bufet lliure, on pots trobar menjar Japonès. És un lloc on el preu està bé, el local és una mica sorollós però és força ampli. </p>
 
-            <p class="text3">Teléfono: 934 58 04 94</p>
+            <p class="text3">Telefon: 934 58 04 94</p>
           </div>
 
 
