--- a/sintesis/ropayaccesorios.html
+++ b/sintesis/ropayaccesorios.html
@@ -62,19 +62,19 @@
           <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
           <p id="text1">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, en ella puedes encontrar un extenso catálogo de variedad sobre cosas de Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas, la calidad de sus productos es bastante buena.</p>
-          <p id="text3">Teléfono: 932 44 84 23</p>
+          <p id="text3">Telefono: 932 44 84 23</p>
         </div>
 
         <div id="nunoya"><h2>Nunoya</h2>
           <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
           <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text1">Si lo tuyo son las telas, el diseño o la pasión hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y quimonos que vienen adquiridas desde Japón, esta situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text1">Si lo tuyo son las telas, el diseño o la pasión hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y quimonos que vienen adquiridas desde Japón, esta situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geometricos tradicionales y estampados florales.</p>
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son de gran calidad y de algodón 100%.
+            <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son de gran calidad y de algodón  .
             Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
-            <p id="text3">Teléfono: 933 17 53 88</p>
+            <p id="text3">Telefono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
@@ -84,7 +84,7 @@
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
             <p id="text1">Norma Cómics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas más ambientadas sobre la cultura Japonesa.</p>
-            <p id="text3">Teléfono: 932 44 84 23</p>
+            <p id="text3">Telefono: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
@@ -94,7 +94,7 @@
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
             <p id="text1">A pesar de que Otamashi sea una tienda pequeña, cuenta con una gran variedad de productos Japoneses, la mayoría de los productos son falsos pero de buena calidad y bastantes baratos.</p>
-            <p id="text3">Teléfono: 930 07 64 10</p>
+            <p id="text3">Telefono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
@@ -104,7 +104,7 @@
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
             <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al público cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda para la gente que quiera sentirse en japon. Los precios son competitivos, pero merece la pena por la buena calidad que tienen. </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
@@ -114,7 +114,7 @@
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text1">Nuestra opinión sobre Momo es que el trato con el público es agradable y encantador, tiene buenos precios y sus productos son de gran calidad, además de que si no encuentras algo sobre el producto que deseas comprar lo puedes reservar. </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
@@ -124,7 +124,7 @@
             <div> <img src="foto/eikyo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
             <p id="text1">Eikyo, es una tienda pequeña y acogedora, sus dueños son de lo más simpaticos y el trato con la gente es educado y encantador, se nota que tienen una gran pasión sobre la cultura Japonesa y siempre te van a recomendar los mejores productos sobre Japón. </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefono: 932 17 96 23</p>
           </div>
       </div>
   </div>
