--- a/sintesis/ropayaccesorios_cat.html
+++ b/sintesis/ropayaccesorios_cat.html
@@ -74,7 +74,7 @@
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text1">Pensem que Nunoya és una botiga ben il·luminada i de mida mitjana, les seves teles estampades són de gran qualitat i de cotó 100%. Aquesta botiga té un tracte fantàstic amb la gent, sens dubte la recomanem si necessites teles de qualsevol mena.
+            <p id="text1">Pensem que Nunoya és una botiga ben il·luminada i de mida mitjana, les seves teles estampades són de gran qualitat i de cotó . Aquesta botiga té un tracte fantàstic amb la gent, sens dubte la recomanem si necessites teles de qualsevol mena.
 </p>
             <p id="text3">Telefon: 933 17 53 88</p>
         </div>
@@ -90,7 +90,7 @@
 
 
 </p>
-            <p id="text3">Teléfono: 932 44 84 23</p>
+            <p id="text3">Telefon: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
